--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git://github.com/kevee/quail.git"
   },
   "scripts": {
-    "test": "grunt --verbose"
+    "test": "grunt test --verbose"
   },
   "devDependencies": {
     "bower": "~1.2.8",
@@ -25,7 +25,9 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-gh-pages": "~0.8.1",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-saucelabs": "~4.1.2"
   },
   "jam": {
     "dependencies": {
