--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -284,12 +284,6 @@ appletContainsTextEquivalentInAlt:
         techniques: 
           - "G74"
           - "H35"
-      1.4.3: 
-        techniques: 
-          - "G18"
-      1.4.6: 
-        techniques: 
-          - "G18"
   title: 
     en: "All applets should contain a text equivalent in the \"alt\" attribute"
   description: 
@@ -315,9 +309,14 @@ appletTextEquivalentsGetUpdated:
     - "content"
   testability: 0
   type: "selector"
-  guidelines: 
+  guidelines:
     508: 
       - "m"
+    wcag: 
+      1.1.1: 
+        techniques: 
+          - "G74"
+          - "H35"
 appletUIMustBeAccessible: 
   selector: "applet"
   tags: 
@@ -326,9 +325,14 @@ appletUIMustBeAccessible:
     - "content"
   testability: 0
   type: "selector"
-  guidelines: 
+  guidelines:
     508: 
       - "m"
+    wcag: 
+      1.1.1: 
+        techniques: 
+          - "G74"
+          - "H35"
   title: 
     en: "Any user interface in an applet must be accessible"
   description: 
@@ -686,7 +690,11 @@ cssTextHasContrast:
     - "color"
   testability: 1
   type: "color"
-  guidelines: []
+  guidelines:
+    wcag:
+      1.4.3:
+        techniques:
+          - "G18"
   title: 
     en: "All elements should have appropriate color contrast"
   description: 
@@ -878,7 +886,11 @@ documentIsWrittenClearly:
     - "content"
   testability: 0.5
   type: "custom"
-  guidelines: []
+  guidelines:
+    wcag:
+      3.1.5:
+        techniques:
+          - "G86"
   title: 
     en: "The document should be written to the target audience and read clearly"
   description: 
@@ -938,7 +950,11 @@ documentReadingDirection:
     - "language"
   testability: 0.5
   type: "selector"
-  guidelines: []
+  guidelines:
+    wcag:
+      1.3.2:
+        techniques:
+          - "H34"
   title: 
     en: "Reading direction of text is correctly marked"
   description: 
@@ -1065,7 +1081,11 @@ documentWordsNotInLanguageAreMarked:
     - "language"
   testability: 0
   type: "selector"
-  guidelines: []
+  guidelines:
+    wcag:
+      3.1.2:
+        techniques:
+          - "H58"
   title: 
     en: "Any words or phrases which are not the document's primary language should be marked"
   description: 
@@ -1078,7 +1098,11 @@ embedHasAssociatedNoEmbed:
     - "content"
   testability: 1
   type: "custom"
-  guidelines: []
+  guidelines:
+    wcag:
+      1.1.1:
+        techniques:
+          - "H46"
   title: 
     en: "All \"embed\" elements have an associated \"noembed\" element"
   description: 
@@ -1131,7 +1155,11 @@ emoticonsExcessiveUse:
     - "content"
   testability: 0.5
   type: "custom"
-  guidelines: []
+  guidelines:
+    wcag: 
+      1.1.1: 
+        techniques: 
+          - "H86"
   title: 
     en: "Emoticons should not be used excessively"
   description: 
@@ -1425,7 +1453,11 @@ headerH1:
     - "content"
   testability: 0
   type: "header"
-  guidelines: []
+  guidelines:
+    wcag:
+      2.4.6:
+        techniques:
+          - "G130"
   title: 
     en: "The header following an h1 is h1 or h2"
   description: 
@@ -1457,7 +1489,11 @@ headerH2:
     - "content"
   testability: 0
   type: "header"
-  guidelines: []
+  guidelines:
+    wcag:
+      2.4.6:
+        techniques:
+          - "G130"
   title: 
     en: "The header following an h2 is h1, h2 or h3"
   description: 
@@ -1489,7 +1525,11 @@ headerH3:
     - "content"
   testability: 0
   type: "header"
-  guidelines: []
+  guidelines:
+    wcag:
+      2.4.6:
+        techniques:
+          - "G130"
   title: 
     en: "The header following an h3 is h1, h2, h3 or h4"
   description: 
@@ -1521,7 +1561,11 @@ headerH4:
     - "content"
   testability: 0
   type: "header"
-  guidelines: []
+  guidelines:
+    wcag:
+      2.4.6:
+        techniques:
+          - "G130"
   title: 
     en: "The header following an h4 is h1, h2, h3, h4 or h5"
   description: 
@@ -1553,7 +1597,11 @@ headerH5:
     - "content"
   testability: 0
   type: "header"
-  guidelines: []
+  guidelines:
+    wcag:
+      2.4.6:
+        techniques:
+          - "G130"
   title: 
     en: "The header following an h5 is h6 or any header less than h6"
   description: 
