--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,10 @@
     "**/*.txt"
   ],
   "dependencies": {
-    "jquery": "~2.0.3",
+    "jquery": "~2.0.3"
+  },
+  "devDependencies": {
     "qunit": "~1.12.0",
     "qunit-composite": "https://github.com/jquery/qunit-composite.git"
-  },
-  "devDependencies": {}
+  }
 }
