--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,5 @@ install:
   - npm install grunt-cli -g
   - npm install
 
-before_script:
-  - curl https://gist.github.com/santiycr/5139565/raw/sauce_connect_setup.sh | bash
-
 after_success:
-  - grunt saucelabs-travis --verbose
+  - grunt saucelabs --verbose
