--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -1234,6 +1234,24 @@ fileLabelIsNearby:
     en: "All \"file\" input elements have a label that is close"
   description: 
     en: "All input elements of type \"file\" must have a corresponding label that is close to the form element. Users of screen magnification or with reduced spatial skills are hampered in using a form element if the label for that element is located far away."
+focusIndicatorVisible:
+  type: "custom"
+  callback: "focusIndicatorVisible"
+  components:
+    - "color"
+    - "convertToPx"
+  tags:
+    - "focus"
+    - "content"
+  guidelines:
+    wcag:
+      2.4.7:
+        techniques:
+          - "G195"
+  title:
+    en: "Focus indicators have high visibility"
+  description:
+    en: "When a focus indicator is used, it should have enough contrast with the background and big enough to be highly visible."
 fontIsNotUsed: 
   selector: "font"
   tags: 
