Added test for technique H65, issue #64.

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2404,6 +2404,33 @@ inputTextValueNotEmpty:
     en: "Text\" input elements require a non-whitespace default text"
   description: 
     en: "All <code>input</code> elements with a type of \"text\" should have a default text which is not empty."
+inputWithoutLabelHasTitle:
+  type: "custom"
+  callback: "inputWithoutLabelHasTitle"
+  components:
+    - "placeholder"
+  testability: 1
+  tags:
+    - "form"
+    - "content"
+  guidelines:
+    wcag:
+      1.1.1:
+        techniques:
+          - "H65"
+      1.3.1:
+        techniques:
+          - "H65"
+      3.3.2:
+        techniques:
+          - "H65"
+      4.1.2:
+        techniques:
+          - "H65"
+  title:
+    en: "Form controls without label should have a title attribute"
+  description:
+    en: "If it is not possible to have a label for a form control, then a title attribute on the element should be provided that describes the purpose of the control."
 labelDoesNotContainInput: 
   selector: "label:has(input)"
   tags: 
