--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2232,6 +2232,15 @@ inputImageAltIsNotPlaceholder:
       1.1.1:
         techniques:
           - "H36"
+      2.1.1:
+        techniques:
+          - "H91"
+      2.1.3:
+        techniques:
+          - "H91"
+      4.1.2:
+        techniques:
+          - "H91"
   title: 
     en: "All \"input\" elements with a type of \"image\" must have an \"alt\" attribute which is not placeholder text"
   description: 
@@ -2290,6 +2299,15 @@ inputImageHasAlt:
           - "F65"
           - "G94"
           - "H36"
+      2.1.1:
+        techniques:
+          - "H91"
+      2.1.3:
+        techniques:
+          - "H91"
+      4.1.2:
+        techniques:
+          - "H91"
   title: 
     en: "All \"input\" elements with a type of \"image\" must have an \"alt\" attribute"
   description: 
