--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "scripts": {
     "test": "grunt test --verbose"
   },
+  "dependencies" : {
+    "jquery": ">1.4.2"
+  },
   "devDependencies": {
     "bower": "~1.2.8",
     "grunt": "~0.4.1",
