Check to see if quailBuilderTests is defined so the builder can set tests in scope.

--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
   "globals": {
     "quail": true,
     "process": true,
-    "console": true
+    "console": true,
+    "quailBuilderTests": true
   }
 }
