--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2765,6 +2765,26 @@ languageDirAttributeIsUsed:
     - "language"
     - "content"
   callback: "languageDirAttributeIsUsed"
+  components:
+    - "language"
+languageChangesAreIdentified:
+  type: "custom"
+  testability: 0.5
+  title:
+    en: "Use language attributes to indicate changes in language"
+  description:
+    en: "When the language of the document changes, make sure to wrap those changes in an element with the <code>lang</code> attribute."
+  guidelines:
+    wcag:
+      3.1.2:
+        techniques:
+          - "H58"
+  tags:
+    - "language"
+    - "content"
+  callback: "languageChangesAreIdentified"
+  components:
+    - "language"
 legendDescribesListOfChoices:
   type: "selector"
   testability: 0
