Introduce a layer of test result reporting that can provide feedback on passes and na tests, not just failures.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2132,7 +2132,8 @@ imgHasAlt:
     - "image"
     - "content"
   options:
-    selector: "img:not(img[alt])"
+    selector: "img"
+    filter: ":not(img[alt])"
 imgHasLongDesc:
   type: "custom"
   testability: 1
