--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -760,6 +760,32 @@ checkboxLabelIsNearby:
     - "labelProximity"
   options:
     selector: "input[type=checkbox]"
+contentPositioningShouldNotChangeMeaning:
+  type: "custom"
+  testability: 0.5
+  title:
+    en: "Meaning should not be created through positioning"
+  description:
+    en: "Positioning should not be used to change the meaning of an element."
+  guidelines:
+    wcag:
+      1.3.2:
+        techniques:
+          - "C6"
+          - "F1"
+      1.4.5:
+        techniques:
+          - "C6"
+      1.4.9:
+        techniques:
+          - "C6"
+      2.4.1:
+        techniques:
+          - "C6"
+  tags:
+    - "content"
+    - "structure"
+  callback: "contentPositioningShouldNotChangeMeaning"
 cssDocumentMakesSenseStyleTurnedOff:
   type: "selector"
   testability: 0
