Added guessLanguage as a dev-only dependency.

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "qunit": "~1.14.0",
-    "qunit-composite": "https://github.com/jquery/qunit-composite.git"
+    "qunit-composite": "https://github.com/jquery/qunit-composite.git",
+    "guessLanguage": "https://github.com/richtr/guessLanguage.js.git"
   }
 }
