--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -1217,11 +1217,13 @@ documentVisualListsAreMarkedUp:
       1.3.1:
         techniques:
           - "H28"
+          - "H48"
           - "T2"
   tags:
     - "list"
     - "semantics"
     - "content"
+  strings: "symbols"
   callback: "documentVisualListsAreMarkedUp"
 embedHasAssociatedNoEmbed:
   type: "custom"
