Phantom doesn't like requesting set files, limiting those tests to browsers only. Tested subtitles for language. #93

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -4267,6 +4267,7 @@ videosEmbeddedOrLinkedNeedCaptions:
     - "content"
   components:
     - "video"
+    - "language"
   callback: "videosEmbeddedOrLinkedNeedCaptions"
 whiteSpaceInWord:
   type: "custom"
