--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -73,7 +73,7 @@ aLinksAreSeperatedByPrintableCharacters:
     - "content"
   callback: "aLinksAreSeperatedByPrintableCharacters"
 aLinksDontOpenNewWindow:
-  type: "selector"
+  type: "custom"
   testability: 1
   title:
     en: "Links should not open a new window without warning"
@@ -87,8 +87,9 @@ aLinksDontOpenNewWindow:
   tags:
     - "link"
     - "content"
-  options:
-    selector: "a[target=_new], a[target=_blank], a[target=_blank]"
+  strings:
+    - "newWindow"
+  callback: "aLinksDontOpenNewWindow"
 aLinksNotSeparatedBySymbols:
   type: "custom"
   testability: 1
