Captured link title attribute, added SCR24 to new window test. Closes #119

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -84,6 +84,7 @@ aLinksDontOpenNewWindow:
       3.2.5:
         techniques:
           - "H83"
+          - "SCR24"
   tags:
     - "link"
     - "content"
