--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -746,6 +746,21 @@ cssTextHasContrast:
   options:
     algorithm: "wcag"
     selector: "*"
+definitionListsAreUsed:
+  type: "custom"
+  testability: 0.5
+  title:
+    en: "Use a definition list for defining terms"
+  description:
+    en: "When providing a list of terms or definitions, use a definition list."
+  guidelines: 
+    wcag:
+      1.3.1:
+        techniques:
+          - "H48"
+  tags:
+    - "structure"
+  callback: "definitionListsAreUsed"
 doctypeProvided:
   type: "custom"
   testability: 1
