--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -559,7 +559,7 @@ blockquoteNotUsedForIndentation:
   title:
     en: "The \"blockquote\" tag should not be used just for indentation"
   description:
-    en: ".. code-block:: html"
+    en: "Blockquote tags are for long-form quotes, and should not be used to indent paragraphs. Use CSS to indent the paragraph instead."
   guidelines:
     wcag:
       1.3.1:
@@ -576,7 +576,7 @@ blockquoteUseForQuotations:
   title:
     en: "If long quotes are in the document, use the \"blockquote\" element to mark them"
   description:
-    en: ".. code-block:: html"
+    en: "If there is a paragraph or more of a quote, use the blockquote element to mark it as such."
   guidelines:
     wcag:
       1.3.1:
@@ -1439,7 +1439,7 @@ frameIsNotUsed:
   title:
     en: "Frames are not used"
   description:
-    en: ".. code-block:: html"
+    en: "Frames should not be used to organize a page."
   guidelines: []
   tags:
     - "deprecated"
@@ -1562,7 +1562,7 @@ framesetIsNotUsed:
   title:
     en: "The \"frameset\" element should not be used"
   description:
-    en: ".. code-block:: html"
+    en: "Frames and framesets should not be used to organize content."
   guidelines: []
   tags:
     - "deprecated"
@@ -1830,7 +1830,7 @@ iframeMustNotHaveLongdesc:
   title:
     en: "Inline frames (\"iframes\") should not have a \"longdesc\" attribute"
   description:
-    en: ".. code-block:: html"
+    en: "Inline frames (iframe) should not have a \"longdesc\" attribute"
   guidelines: []
   tags:
     - "objects"
@@ -2579,7 +2579,7 @@ labelDoesNotContainInput:
   title:
     en: "Label elements should not contain an input element"
   description:
-    en: ".. code-block:: html"
+    en: "Label elements should not wrap around another input element, as this can cause the label to be read twice by screen readers."
   guidelines: []
   tags:
     - "form"
@@ -2611,7 +2611,7 @@ labelMustNotBeEmpty:
   title:
     en: "Labels must contain text"
   description:
-    en: ".. code-block:: html"
+    en: "Labels in forms must contain readable text that describes the target form element."
   guidelines:
     wcag:
       1.1.1:
@@ -3635,7 +3635,7 @@ selectWithOptionsHasOptgroup:
   title:
     en: "Form select elements should use optgroups for long selections"
   description:
-    en: ".. code-block:: html"
+    en: "If a select element has many options, use optgroups to help ease navigation."
   guidelines:
     wcag:
       1.3.1:
