--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -1811,6 +1811,22 @@ headersUseToMarkSections:
     - "header"
     - "content"
   callback: "headersUseToMarkSections"
+idRefHasCorrespondingId:
+  type: "custom"
+  testability: 1
+  title:
+    en: "Elements with an idref attribute must correspond to an element with an ID"
+  description:
+    en: "When using an idref attribute, the target element with the ID must exist on the page."
+  guidelines:
+    wcag:
+      1.3.1:
+        techniques:
+          - "F17"
+      4.1.1:
+        techniques:
+          - "F17"
+  callback: "idRefHasCorrespondingId"
 iIsNotUsed:
   type: "selector"
   testability: 1
