--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -3719,6 +3719,22 @@ svgContainsTitle:
     - "content"
   options:
     selector: "svg:not(svg:has(title))"
+tableAxisHasCorrespondingId:
+  type: "custom"
+  testability: 1
+  title:
+    en: "Axis attribute should have corresponding IDs"
+  description:
+    en: "When using the axis attribute to group cells together, ensure they have a target element with the same ID."
+  guidelines:
+    wcag:
+      1.3.1:
+        techniques:
+          - "F17"
+      4.1.1:
+        techniques:
+          - "F17"
+  callback: "tableAxisHasCorrespondingId"
 tabIndexFollowsLogicalOrder:
   type: "custom"
   testability: 0.5
