--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -770,7 +770,7 @@ definitionListsAreUsed:
     en: "Use a definition list for defining terms"
   description:
     en: "When providing a list of terms or definitions, use a definition list."
-  guidelines: 
+  guidelines:
     wcag:
       1.3.1:
         techniques:
@@ -1490,6 +1490,23 @@ frameRelationshipsMustBeDescribed:
     - "frame"
   options:
     selector: "frameset:not(frameset[longdesc])"
+framesAreUsedToGroupContent:
+  type: "selector"
+  testability: 0.5
+  title:
+    en: "Use frame elements to group repeated materials"
+  description:
+    en: "When blocks of repeated content are used on a site, use frames to group content that is the same across pages."
+  guidelines:
+    wcag:
+      2.4.1:
+        techniques:
+          - "H70"
+  tags:
+    - "deprecated"
+    - "frame"
+  options:
+    selector: "body:not(body:has(frameset))"
 frameSrcIsAccessible:
   type: "selector"
   testability: 0
