Fixed aImgAltNotRepetitive test.
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2095,7 +2095,7 @@ imgHasAlt:
     - "image"
     - "content"
   options:
-    selector: ":not(img[alt])"
+    selector: "img:not(img[alt])"
 imgHasLongDesc:
   type: "custom"
   testability: 1
