--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -1840,13 +1840,29 @@ headersHaveText:
     content: true
     empty: true
     selector: "h1, h2, h3, h4, h5, h6"
+headersUsedToIndicateMainContent:
+  type: "custom"
+  testability: 0.5
+  title:
+    en: "Use header to indicate start of main content"
+  description:
+    en: "For every main content area, indicate the beginning of the main content using a header."
+  guidelines:
+    wcag:
+      2.4.1:
+        techniques:
+          - "H69"
+  tags:
+    - "header"
+    - "content"
+  callback: "headersUsedToIndicateMainContent"
 headersUseToMarkSections:
   type: "custom"
   testability: 0.5
   title:
     en: "Use headers to mark the beginning of each section"
   description:
-    en: "Check that each logical section of the page is broken or introduced with a header (<code></code>. h1-h6>) element."
+    en: "Check that each logical section of the page is broken or introduced with a header (h1-h6) element."
   guidelines:
     wcag:
       1.3.1:
