--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -511,7 +511,7 @@ areaLinksToSoundFile:
   options:
     selector: "area[href$=wav], area[href$=snd], area[href$=mp3], area[href$=iff], area[href$=svx], area[href$=sam], area[href$=smp], area[href$=vce], area[href$=vox], area[href$=pcm], area[href$=aif]"
 ariaOrphanedContent:
-  type: "selector"
+  type: "custom"
   testability: 1
   title:
     en: "Pages using ARIA roles should not have orphaned content"
@@ -521,8 +521,7 @@ ariaOrphanedContent:
   tags:
     - "aria"
     - "content"
-  options:
-    selector: "body *:not(*[role] *, *[role], script, meta, link)"
+  callback: "ariaOrphanedContent"
 basefontIsNotUsed:
   type: "selector"
   testability: 1
