--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -4307,3 +4307,37 @@ doNotUseGraphicalSymbolToConveyInformation:
     - "link"
     - "content"
   callback: "doNotUseGraphicalSymbolToConveyInformation"
+linkDoesNotChangeContextOnFocus:
+  type: "event"
+  testability: 1
+  title:
+    en: "Link elements must not contain an \"onfocus\" attribute"
+  description:
+    en: "Actions like \"onfocus\" can take control away from users who are trying to navigate the page. Using an \"onfocus\" attribute for things like links should be replaced with css."
+  guidelines: []
+  tags:
+    - "form"
+    - "content"
+  components:
+    - "event"
+    - "hasEventListener"
+  options:
+    searchEvent: "onfocus"
+    selector: "a"
+buttonDoesNotChangeContextOnFocus:
+  type: "event"
+  testability: 1
+  title:
+    en: "Buttons must not contain an \"onfocus\" attribute"
+  description:
+    en: "Actions like \"onfocus\" can take control away from users who are trying to navigate the page. Using an \"onfocus\" attribute for things like buttons should be replaced with css."
+  guidelines: []
+  tags:
+    - "form"
+    - "content"
+  components:
+    - "event"
+    - "hasEventListener"
+  options:
+    searchEvent: "onfocus"
+    selector: "input[type=checkbox],input[type=text],button"
