--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   ],
   "dependencies": {
     "jquery": "~2.0.3",
-    "node-htmlparser": "~2.0.0"
+    "node-htmlparser": "~2.0.0",
+    "RainbowVis-JS" : "https://github.com/anomal/RainbowVis-JS.git"
   },
   "devDependencies": {
     "qunit": "~1.14.0",
