--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -4342,3 +4342,18 @@ buttonDoesNotChangeContextOnFocus:
   options:
     searchEvent: "onfocus"
     selector: "input[type=checkbox],input[type=text],button"
+scriptOnFocusChangeBackgroundOrBorder:
+  type: "custom"
+  testability: 0
+  title:
+    en: "Using script to change the background color or border of the element with focus"
+  description:
+    en: "Using script to change the background color or border of the element with focus"
+  guidelines:
+    wcag:
+      2.4.7:
+        techniques:
+          - "SCR31"
+  tags:
+    - "content"
+  callback: "scriptOnFocusChangeBackgroundOrBorder"
