Added test listOfLinksUseList for H48, fixes #155

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ lib/*
 test/quail-testing.jquery.js
 test/accessibility-tests/_tests.json
 test/quail-testrunner.js
+
+test/accessibility-tests/_tests.json
