--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2886,6 +2886,22 @@ listNotUsedForFormatting:
     - "list"
     - "content"
   callback: "listNotUsedForFormatting"
+listOfLinksUseList:
+  type: "custom"
+  testability: 1
+  title:
+    en: "A list of links separated by non-readable characters should be in an ul or ol"
+  description:
+    en: "A list of links without separation betweeen them should be placed in an ol or ul element."
+  guidelines:
+    wcag:
+      1.3.1:
+        techniques:
+          - "H48"
+  tags:
+    - "link"
+    - "content"
+  callback: "listOfLinksUseList"
 marqueeIsNotUsed:
   type: "selector"
   testability: 1
