Add a test file for the Success Criteria 1.4.3
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,6 +6,7 @@
   "eqnull": true,
   "expr": true,
   "forin": true,
+  "loopfunc": true,
   "globals": {
     "guessLanguage": true,
     "process": true,
