--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -721,6 +721,21 @@ contentPositioningShouldNotChangeMeaning:
     - "content"
     - "structure"
   callback: "contentPositioningShouldNotChangeMeaning"
+contentInMeaningfulSequence:
+  type: "custom"
+  testability: 0.5
+  title:
+    en: "Content should have a meaningful sequence"
+  description:
+    en: "The content on the page should match as closely as possible the visual presentation."
+  guidelines:
+    wcag:
+      1.3.2:
+        techniques:
+          - "G57"
+  tags:
+    - "content"
+  callback: "contentInMeaningfulSequence"
 cssDocumentMakesSenseStyleTurnedOff:
   type: "selector"
   testability: 0
