--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -722,21 +722,6 @@ contentPositioningShouldNotChangeMeaning:
     - "content"
     - "structure"
   callback: "contentPositioningShouldNotChangeMeaning"
-contentInMeaningfulSequence:
-  type: "custom"
-  testability: 0.5
-  title:
-    en: "Content should have a meaningful sequence"
-  description:
-    en: "The content on the page should match as closely as possible the visual presentation."
-  guidelines:
-    wcag:
-      1.3.2:
-        techniques:
-          - "G57"
-  tags:
-    - "content"
-  callback: "contentInMeaningfulSequence"
 cssDocumentMakesSenseStyleTurnedOff:
   type: "selector"
   testability: 0
@@ -4345,6 +4330,21 @@ whiteSpaceInWord:
   tags:
     - "content"
   callback: "whiteSpaceInWord"
+whiteSpaceNotUsedForFormatting:
+  type: "custom"
+  testability: 0.5
+  title:
+    en: "Whitespace should not be used for conveying information"
+  description:
+    en: "Spaces or tabs are not read by assistive technology and should not be used to convey meaning."
+  guidelines:
+    wcag:
+      1.3.2:
+        techniques:
+          - "G57"
+  tags:
+    - "content"
+  callback: "whiteSpaceNotUsedForFormatting"
 doNotUseGraphicalSymbolToConveyInformation:
   type: "custom"
   testability: 1
