--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "grunt-convert": "~0.1.5",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-gh-pages": "~0.8.1",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-saucelabs": "~4.1.2"
+    "grunt-bower-task": "~0.3.4"
   },
   "jam": {
     "dependencies": {
